# CS100-Final-Project-Personal-Copy

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
CheckersEngine/: CMakeLists.txt
CheckersEngine/Src/: Collision.cpp  Collision.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Map.cpp  Map.h  State.cpp  State.h  TextureManager.cpp  TextureManager.h  Vector2D.cpp  Vector2D.h  main.cpp
CheckersEngine/Src/ECS/: BoardBuilder.h  ButtonComponent.h  CheckerController.cpp  CheckerController.h  CheckerLinker.h  CheckerLocker.cpp  CheckerLocker.h  ColliderComponent.h  Components.h  ECS.cpp  ECS.h  KeyboardController.h  LogicComponent.cpp  LogicComponent.h  MouseController.h  SpriteComponent.h  TileComponent.h  TileLinker.h  TransformComponent.h
CheckersEngine/Src/GameLogic/: Board.cpp  Board.h  Checker.cpp  Checker.h  Game.cpp  Game.h  GameLogic.cpp  GameLogic.h  Player.cpp  Player.h
CheckersEngine/Src/GameObjects/: Checker.cpp  Checker.h
SDL2_image/include/: SDL_image.h
Src/: Collision.cpp  Collision.h  Game.cpp  Game.h  GameObject.cpp  TextureManager.cpp  Vector2D.cpp
Src/ECS/: TransformComponent.h
test/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  Project.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  test.cpp  test.vcxproj  test.vcxproj.filters
test/lib/Release/: gtest.lib
test/test.dir/Debug/: test.exe.recipe
test/test.dir/Debug/test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  test.lastbuildstate
test/test.dir/Release/: _IsIncrementalBuild  test.exe.recipe
test/test.dir/Release/test.tlog/: CL.command.1.tlog  CL.write.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
test/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
test/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
test/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
test/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.read.1.tlog  ZERO_CHECK.lastbuildstate
testing/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  Project.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  test.cpp  test.vcxproj  test.vcxproj.filters  testing.txt
testing/test.dir/Debug/: test.exe.recipe
testing/test.dir/Debug/test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
testing/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
testing/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
